[package]
name    = "user-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["json"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
anyhow             = "1"

[profile.release]
opt-level = 3
strip     = true
lto       = true
